# validibot-validators

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_ISOLATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  __init__.py  conftest.py  justfile  justfile.local.example  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
core/: callback_client.py  error_reporting.py
core/tests/: __init__.py  test_callback_client.py
energyplus/: Dockerfile  README.md  main.py  requirements.txt  runner.py
energyplus/tests/: __init__.py  test_runner.py
fmi/: Dockerfile  README.md  main.py  requirements.txt  runner.py
fmi/tests/: test_integration_feedthrough.py  test_runner.py
shared/: __init__.py  callback_client.py  envelope_loader.py  gcs_client.py
shared/tests/: __init__.py  test_callback_client.py
tests/: __init__.py  conftest.py
validators/: __init__.py
validators/core/: callback_client.py  envelope_loader.py  error_reporting.py  gcs_client.py  storage_client.py
validators/core/tests/: test_callback_client.py
validators/energyplus/: .gitignore  Dockerfile  README.md  __init__.py  __metadata__.py  main.py  requirements.txt  runner.py
validators/energyplus/tests/: test_runner.py
validators/fmi/: Dockerfile  README.md  __init__.py  __metadata__.py  main.py  requirements.txt  runner.py
validators/fmi/tests/: test_integration_feedthrough.py  test_runner.py
validators/fmu/: Dockerfile  requirements.txt  runner.py
